# floulib

./: .project  LICENSE  README.rst  pyproject.toml
docs/source/: Any.rst  DistToPi.rst  DistToPiMultilinear.rst  Example.rst  Fuzzify.rst  LR.rst  Terms.rst  Trapezoid.rst  Variable.rst  conf.py  example.rst  index.rst
docs/source/_static/css/: custom.css
src/floulib/: Any.py  Defuzzify.py  Discrete.py  DistToPi.py  DistToPiMultilinear.py  Fuzzify.py  LR.py  Multilinear.py  Operator.py  Plot.py  Rectangle.py  Rule.py  Rules.py  Singleton.py  Smiley.py  Term.py  Terms.py  Trapezoid.py  Triangle.py  Variable.py  __init__.py
