[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floulib"
version = "0.0.1"
authors = [
  { name="Laurent Foulloy", email="yolf.typo3@orange.fr" },
]
description = "A packing for Fuzzy Logic"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'matplotlib >= 3.1.3',
    'numpy >= 1.19.1',
    'scipy >= 1.4.1',
    'shapely >= 2.0.1'
]
[project.urls]
"Homepage" = "https://github.com/YolfTypo3/floulib"
"Bug Tracker" = "https://github.com/YolfTypo3/floulib/issues"